# mqtt-auth-plugin

./: .gitignore  .release-it-prerelease.json  .release-it.json  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  auth-plug.c
.github/workflows/: build.yml  release-default.yml  release-prerelease.yml  versioning-latest.yml  versioning-prerelease.yml  versioning-stable.yml
rpms/: libuv-1.27.0-1.el7.x86_64.rpm  mosquitto-1.5.8-1.el7.x86_64.rpm  mosquitto-devel-1.5.8-1.el7.x86_64.rpm  mosquitto-devel-1.6.10-1.el7.x86_64.rpm
samples/: acl.json  acl2.json
src/: config.rs  lib.rs  misc.rs  plugin.h
tests/: lib.rs
